@startuml ft_irc

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

class Server {
  -port : int
  -password : string
  -serverSocket : int
  -fds : vector
  -clients : map
  -channels : map
  
  +Server(port : int, password : string)
  +~Server()
  +start() : void
  +stop() : void
  -setupSocket() : void
  -handlePoll() : void
  -acceptNewClient() : void
  -handleClientMessage(fd : int) : void
  -disconnectClient(fd : int) : void
  -getClientByNick(nick : string) : Client
  -getOrCreateChannel(name : string) : Channel
  -executeCommand(client : Client, cmd : string) : void
}

class Client {
  -fd : int
  -nickname : string
  -username : string
  -realname : string
  -hostname : string
  -authenticated : bool
  -registered : bool
  -buffer : string
  -channels : set
  
  +Client(fd : int)
  +~Client()
  +getFd() : int
  +getNickname() : string
  +getUsername() : string
  +isAuthenticated() : bool
  +isRegistered() : bool
  +setNickname(nick : string) : void
  +setUsername(user : string) : void
  +authenticate() : void
  +addToChannel(channel : Channel) : void
  +removeFromChannel(channel : Channel) : void
  +appendToBuffer(data : string) : void
  +extractCommand() : string
  +sendMessage(msg : string) : void
}

class Channel {
  -name : string
  -topic : string
  -key : string
  -userLimit : int
  -members : set
  -operators : set
  -invitedUsers : set
  -inviteOnly : bool
  -topicRestricted : bool
  
  +Channel(name : string)
  +~Channel()
  +getName() : string
  +getTopic() : string
  +setTopic(topic : string, client : Client) : void
  +setKey(key : string) : void
  +hasKey() : bool
  +checkKey(key : string) : bool
  +addMember(client : Client) : void
  +removeMember(client : Client) : void
  +addOperator(client : Client) : void
  +removeOperator(client : Client) : void
  +isOperator(client : Client) : bool
  +isMember(client : Client) : bool
  +broadcast(msg : string, exclude : Client) : void
  +setInviteOnly(mode : bool) : void
  +setTopicRestricted(mode : bool) : void
  +setUserLimit(limit : int) : void
  +inviteUser(client : Client) : void
  +isInvited(client : Client) : bool
  +kickMember(client : Client, reason : string) : void
}

abstract class Command {
  #server : Server
  #client : Client
  #params : vector
  
  +Command(srv : Server, cli : Client, params : vector)
  +{abstract} execute() : void
  #sendReply(code : int, msg : string) : void
  #sendError(code : int, msg : string) : void
}

class PassCommand {
  +execute() : void
}

class NickCommand {
  +execute() : void
}

class UserCommand {
  +execute() : void
}

class JoinCommand {
  +execute() : void
}

class PartCommand {
  +execute() : void
}

class PrivmsgCommand {
  +execute() : void
}

class KickCommand {
  +execute() : void
}

class InviteCommand {
  +execute() : void
}

class TopicCommand {
  +execute() : void
}

class ModeCommand {
  +execute() : void
}

class QuitCommand {
  +execute() : void
}

class MessageParser {
  +{static} parse(line : string, srv : Server, cli : Client) : Command
  -{static} splitParams(str : string) : vector
  -{static} extractPrefix(line : string) : string
}

Server "1" *-- "many" Client
Server "1" *-- "many" Channel
Client "many" -- "many" Channel
Channel "1" o-- "many" Client

Command <|-- PassCommand
Command <|-- NickCommand
Command <|-- UserCommand
Command <|-- JoinCommand
Command <|-- PartCommand
Command <|-- PrivmsgCommand
Command <|-- KickCommand
Command <|-- InviteCommand
Command <|-- TopicCommand
Command <|-- ModeCommand
Command <|-- QuitCommand

Server ..> MessageParser : uses
MessageParser ..> Command : creates
Command --> Server : modifies
Command --> Client : modifies
Command --> Channel : modifies

note right of Server
  Utilise poll() pour gérer
  les I/O non-bloquants.
  Un seul poll() pour tout.
end note

note right of Client
  Buffer pour gérer les
  messages partiels reçus
  via TCP.
end note

note right of Channel
  Modes supportés:
  i = invite-only
  t = topic restricted
  k = key/password
  o = operator
  l = user limit
end note

@enduml
